[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "image-compare"
description = ""
version = "0.1.0"
authors = [
    { name = "aubustou", email = "survivalfr@yahoo.fr" }
]
dependencies = [
"chromadb",  # Remplacez ceci par la bibliothèque client correcte pour ChromaDB
"numpy",
"torch",
"pillow",
"torchvision",
"requests",
]

[project.optional-dependencies]
dev = [
    "pdbpp",
    "mypy",
    "ruff",
    "black",
    "bandit",
    "pytest",
]

[project.scripts]
search = "image_compare.image:main"
wishlist = "image_compare.wishlist:main"

[tool.setuptools.packages]
find = {namespaces = false}

[tool.autoflake]
remove_all_unused_imports = true
ignore_init_module_imports = true

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = 'black'